--- a/style.css
+++ b/style.css
@@ -1,14 +1,49 @@
 /*Selector{
 	Property: value;
 }*/
-h2{
-	color: red;
+
+*{
+	text-align: right;
+}
+
+
+body{
+	background-image: url(torontowallpaper.png); 
+	background-size: cover;
+}
+
+h2, p:hover{
+	color: #AA3939;
+	text-align: center;
+	border: 5px solid rgba(133, 94, 144,0.5);
+	cursor: pointer;
 }
 
 p{
-	color: pink;
+	color: #C57F92;
 }
 
 p{
 	color: green;
+}
+
+li{
+	list-style: none;
+	display: inline-block;
+}
+
+.webtext:first-child{
+	border: 5px dashed green;
+}
+
+.active{
+	color: red;
+}
+
+#div1{
+	background: rgba(0,0,255,0.2);
+}
+
+#div2{
+	background: rgba(255,0,0,0.2);
 }
