--- a/style.css
+++ b/style.css
@@ -1,6 +1,19 @@
 /*Selector{
 	Property: value;
+
 }*/
+
+/*https://static.pexels.com/photos/52500/horse-herd-fog-nature-52500.jpeg
+
+https://static.pexels.com/photos/66898/elephant-cub-tsavo-kenya-66898.jpeg
+
+https://static.pexels.com/photos/213399/pexels-photo-213399.jpeg
+
+https://static.pexels.com/photos/158471/ibis-bird-red-animals-158471.jpeg
+
+https://static.pexels.com/photos/133459/pexels-photo-133459.jpeg
+
+https://static.pexels.com/photos/50988/ape-berber-monkeys-mammal-affchen-50988.jpeg*/
 
 *{
 	text-align: right;
@@ -12,7 +25,7 @@ body{
 	background-size: cover;
 }
 
-h2, p:hover{
+h2, p{
 	color: #AA3939;
 	text-align: center;
 	border: 5px solid rgba(133, 94, 144,0.5);
@@ -20,11 +33,24 @@ h2, p:hover{
 }
 
 p{
-	color: #C57F92;
+	line-height: 20px
+	font-style: italic;
+	font-weight: bold;
+	font-size: 120%;
+	font-family: 'Roboto Mono', monospace;
 }
 
 p{
 	color: green;
+}
+
+img{
+	float: left;
+}
+
+footer{
+	clear: both;
+	text-align: center;
 }
 
 li{
